# OpenGL_and_Vulkan_3D

./: README.md  license.txt
assets/cat_2/: 12221_Cat_v1_l3.obj.json
cpp_ogl_1.a_triangle/: CMakeLists.txt  build.bat
cpp_ogl_1.a_triangle/src/: gl.c  main.cpp
cpp_ogl_1.b_going_3d/: CMakeLists.txt  compile.bat  release.txt  run.bat
cpp_ogl_1.b_going_3d/shaders/: default.frag  default.vert
cpp_ogl_1.b_going_3d/src/: app.cpp  app.hpp
cpp_ogl_1.b_going_3d/src/opengl_glfw/: ebo.cpp  ebo.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h
cpp_vlk_1.a_triangle/shaders/: simple.frag
cpp_vlk_1.a_triangle/src/: app.hpp  main.cpp
cpp_vlk_1.a_triangle/src/vulkan_glfw/: device.hpp  pipeline.cpp  pipeline.hpp  window.cpp  window.hpp
cpp_vlk_2.a_blinn_phong/: shader_compile.bat
cpp_vlk_2.a_blinn_phong/shaders/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
cpp_vlk_2.a_blinn_phong/shaders/compiled/: simple_shader.frag.spv  simple_shader.vert.spv
cpp_vlk_2.a_blinn_phong/src/: app.cpp  app.hpp  controller.cpp  controller.hpp  point_light.cpp  point_light.hpp  simple_render.cpp  simple_render.hpp
cpp_vlk_2.a_blinn_phong/src/vulkan_glfw/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  frame_info.hpp  game_object.cpp  game_object.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  swap_chain.cpp  swap_chain.hpp  window.cpp
py_1.a_blinn_phong/: core.py  main.py  model.py  requirements.txt
py_1.a_blinn_phong/shaders/: default.frag  light.vert  shadow.vert
py_2.a_cook-torrance/: core.py  main.py  requirements.txt
py_2.a_cook-torrance/shaders/: default.frag  default.vert  light.frag
py_3.a_terrain/: core.py  main.py
py_3.a_terrain/shaders/: grass.frag  grass.geom  grass.vert  ground.frag  ground.vert
py_3.c_terrain/: core.py
py_3.c_terrain/shaders/: grass.frag  grass.geom  ground.vert  shadow.vert  skybox.frag
py_4.a_ssaa/: core.py  main.py
py_4.a_ssaa/shaders/: default.vert
py_5.a_sky_box/: core.py  main.py
py_5.a_sky_box/shaders/: default.vert  skybox.frag
py_6.a_obj/: core.py
